--- a/CSS/pag-rej.css
+++ b/CSS/pag-rej.css
@@ -24,21 +24,23 @@ main{
     display: flex;
     position: relative;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    text-align: center;
     top: 5rem;
 }
 
 .destaque{
-    font-size: 2rem;
+    font-size: 1.8rem;
+    font-weight: bold;
 }
 
 .subtexto{
     position: relative;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 15rem;
+    width: 20rem;
     top: 5rem;
     font-size: 1.5rem;
 }
@@ -53,7 +55,7 @@ main{
     margin: 1rem;
     min-width: 15rem; 
     height: 2rem;
-    top: 15rem;
+    top: 12rem;
     background-color: darkseagreen;
 }
 
@@ -61,6 +63,7 @@ main{
     align-items: center;
     font-size: 1.5rem
 }
+
 
 img{
     width: 2.5rem;
