--- a/CSS/receber3.css
+++ b/CSS/receber3.css
@@ -26,26 +26,12 @@ main{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    top: 2rem;
+    top: 5rem;
 }
 
-.dados{
-    position: relative;
-    flex-direction: column;
-    justify-content: center;
+.fonte{
     align-items: center;
-    top: 4rem;
-}
-
-.destaque{
-    font-size: 2rem;
-}
-
-.subtexto{
-    font-size: 1.2rem;
-    align-items: center;
-    position: relative;
-    top: 1.5rem;
+    font-size: 1.5rem
 }
 
 .botao{
@@ -62,7 +48,35 @@ main{
     background-color: darkseagreen;
 }
 
-.fonte{
+.dados{
+    position: relative;
+    bottom: 1rem;
+}
+
+.destaque{
+    font-size: 2rem;
+}
+
+.subtexto{
+    font-size: 1.5rem;
     align-items: center;
-    font-size: 1.5rem
+    position: relative;
+    top: 1rem;
+}
+
+.para{
+    position: relative;
+    top: 4rem;
+    justify-content: center;
+}
+
+ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+img{
+    width: 2.5rem;
+    height: 2.5rem;
 }
