--- a/CSS/receber1.css
+++ b/CSS/receber1.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gainsboro; 
+    background-color: #B3C7E3; 
 }
 
 header{
@@ -9,7 +9,7 @@ header{
     align-items: center;
     position: relative;
     border-bottom: 0.1rem solid black;
-    background-color: darkolivegreen;
+    background-color: #8CBD8C;
 }
 
 .logo{
@@ -65,7 +65,7 @@ section{
     min-width: 15rem; 
     height: 2rem;
     top: 18rem;
-    background-color: darkseagreen;
+    background-color: #8CBD8C;
 }
 
 .fonte{
@@ -78,3 +78,7 @@ img{
     height: 2.5rem;
 }
 
+.open-sans{
+    font-family: 'Open Sans', sans-serif;
+    color: #0D284F;
+}
