--- a/CSS/historico2.css
+++ b/CSS/historico2.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gainsboro; 
+    background-color: #B3C7E3;  
 }
 
 main{
@@ -20,7 +20,7 @@ header{
     align-items: center;
     position: relative;
     border-bottom: 0.1rem solid black;
-    background-color: darkolivegreen;
+    background-color: #8CBD8C;
 }
 
 
@@ -116,7 +116,7 @@ h2{
     height: 0.7rem;
     bottom: 2.5rem;
     right: 1.5rem;
-    background-color: darkseagreen;
+    background-color: #8CBD8C;
 }
     
 .fonte{
@@ -127,4 +127,9 @@ h2{
 img{
     width: 2.5rem;
     height: 2.5rem;
+}
+
+.open-sans{
+    font-family: 'Open Sans', sans-serif;
+    color: #0D284F;
 }
