--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gainsboro; 
+    background-color: #B3C7E3; 
 }
 
 main{
@@ -17,7 +17,7 @@ header{
     align-items: center;
     position: relative;
     border-bottom: 0.1rem solid black;
-    background-color: darkolivegreen;
+    background-color: #8CBD8C;
 }
 
 
@@ -71,7 +71,7 @@ header{
     margin: 1rem;
     min-width: 20rem; 
     height: 4rem;
-    background-color: darkseagreen;
+    background-color: #8CBD8C;
    
 }
 
@@ -88,4 +88,9 @@ img{
 .saldo{
     font-size: 1.3rem;
     font-weight: bold;
- }
+}
+
+.open-sans{
+    font-family: 'Open Sans', sans-serif;
+    color: #0D284F;
+}
