--- a/CSS/pagar3.css
+++ b/CSS/pagar3.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gainsboro; 
+    background-color: #B3C7E3; 
 }
 
 header{
@@ -9,7 +9,7 @@ header{
     align-items: center;
     position: relative;
     border-bottom: 0.1rem solid black;
-    background-color: darkolivegreen;
+    background-color: #8CBD8C;
 }
 
 .logo{
@@ -45,7 +45,7 @@ main{
     min-width: 15rem; 
     height: 2rem;
     top: 12rem;
-    background-color: darkseagreen;
+    background-color: #8CBD8C;
 }
 
 .dados{
@@ -58,6 +58,7 @@ main{
 }
 
 .subtexto{
+    display: flex;
     font-size: 1.5rem;
     align-items: center;
     position: relative;
@@ -79,4 +80,9 @@ ul{
 img{
     width: 2.5rem;
     height: 2.5rem;
+}
+
+.open-sans{
+    font-family: 'Open Sans', sans-serif;
+    color: #0D284F;
 }
