--- a/CSS/receber2.css
+++ b/CSS/receber2.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gainsboro; 
+    background-color: #B3C7E3; 
 }
 
 header{
@@ -9,7 +9,7 @@ header{
     align-items: center;
     position: relative;
     border-bottom: 0.1rem solid black;
-    background-color: darkolivegreen;
+    background-color: #8CBD8C;
 }
 
 .logo{
@@ -67,7 +67,7 @@ h3{
     min-width: 15rem; 
     height: 2rem;
     top: 6rem;
-    background-color: darkseagreen;
+    background-color: #8CBD8C;
 }
 
 .fonte{
@@ -86,4 +86,9 @@ h3{
 img{
     width: 2.5rem;
     height: 2.5rem;
+}
+
+.open-sans{
+    font-family: 'Open Sans', sans-serif;
+    color: #0D284F;
 }
