--- a/CSS/receber4.css
+++ b/CSS/receber4.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gainsboro; 
+    background-color: #B3C7E3; 
 }
 
 header{
@@ -9,7 +9,7 @@ header{
     align-items: center;
     position: relative;
     border-bottom: 0.1rem solid black;
-    background-color: darkolivegreen;
+    background-color: #8CBD8C;
 }
 
 .logo{
@@ -54,7 +54,7 @@ main{
     min-width: 15rem; 
     height: 2rem;
     top: 15rem;
-    background-color: darkseagreen;
+    background-color: #8CBD8C;
 }
 
 .fonte{
@@ -65,4 +65,9 @@ main{
 img{
     width: 2.5rem;
     height: 2.5rem;
+}
+
+.open-sans{
+    font-family: 'Open Sans', sans-serif;
+    color: #0D284F;
 }
