--- a/CSS/receber2.css
+++ b/CSS/receber2.css
@@ -8,7 +8,7 @@ header{
     justify-content: flex-start;
     align-items: center;
     position: relative;
-    border-bottom: 0.1rem solid black;
+    border-bottom: 0.1rem solid #0D284F;
     background-color: #8CBD8C;
 }
 
@@ -44,7 +44,7 @@ main{
 .qrcode{
     width: 15rem;
     height: 15rem;
-    border: 0.3rem solid black;
+    border: 0.3rem solid #0D284F;
 }
 
 h3{
@@ -61,7 +61,7 @@ h3{
     position: relative;
     align-items: center;
     flex-direction: column;
-    border: 0.1rem solid black;
+    border: 0.1rem solid #0D284F;
     padding: 1rem;
     margin: 1rem;
     min-width: 15rem; 
@@ -90,5 +90,9 @@ img{
 
 .open-sans{
     font-family: 'Open Sans', sans-serif;
-    color: #0D284F;
+    color: black;
+}
+
+a{
+    text-decoration: none;
 }
