--- a/CSS/historico1.css
+++ b/CSS/historico1.css
@@ -16,7 +16,7 @@ header{
     justify-content: flex-start;
     align-items: center;
     position: relative;
-    border-bottom: 0.1rem solid black;
+    border-bottom: 0.1rem solid #0D284F;
     background-color: #8CBD8C;
 }
 
@@ -35,12 +35,6 @@ header{
     font-size: 2rem;
 }
 
-.grafico-img{
-    width: 22rem;
-    height: 12rem;
-    justify-content: center;
-}
-
 .section-grafico{
     display: flex;
     flex-direction: column;
@@ -48,6 +42,11 @@ header{
     align-items: flex-start;
     position: relative;
     top: 4rem;
+}
+
+.grafico-img{
+    width: 22rem;
+    height: 12rem;
 }
 
 .negrito{
@@ -61,10 +60,10 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color:darkgray;
+    background-color:#A1D6A1;
     padding: 0.5rem;
     bottom: 12rem;
-    left:15.5rem;
+    left:15.1rem;
     border-radius: 10%;
 }
 
@@ -74,8 +73,8 @@ header{
     justify-content: space-evenly;
     align-items: flex-start;
     position: relative;
-    background-color:rgba(169, 169, 169, 0.747);
-    border: 0.1rem solid black;
+    background-color:#A1D6A1;
+    border: 0.1rem solid #0D284F;
     padding: 2rem;
     width: 18rem;
     height: 6rem;
@@ -83,26 +82,20 @@ header{
 }
 
 .titulo-ultimas-transacoes{
-    position: relative;
-    bottom: 0.8rem;
-    right: 1.5rem;
     font-size: 1.3rem;
     font-weight: bold;
 }
 
 .obter-infos{
-    position: absolute;
-    bottom: 0.8rem;
-    left: 9rem;
-    display: flex; 
+    position: relative;
+    top: 5rem;
     align-items: center;
-    flex-direction: column;
-    border: 0.1rem solid black;
+    justify-content: center;
+    border: 0.1rem solid #0D284F;
     padding: 1rem;
-    margin: 1rem;
-    width: rem; 
+    margin: 1rem; 
     height: 0.5rem;
-    background-color: darkseagreen;
+    background-color: #A1D6A1;
 }
 
 .font{
@@ -127,5 +120,9 @@ li{
 
 .open-sans{
     font-family: 'Open Sans', sans-serif;
-    color: #0D284F;
+    color: black;
+}
+
+a{
+    text-decoration: none;
 }
