--- a/CSS/historico2.css
+++ b/CSS/historico2.css
@@ -6,10 +6,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-    position: relative;
-    left: 1.5rem;
-    top: 2rem;
+    align-items: center;
 }
 
 
@@ -19,7 +16,7 @@ header{
     justify-content: flex-start;
     align-items: center;
     position: relative;
-    border-bottom: 0.1rem solid black;
+    border-bottom: 0.1rem solid #0D284F;
     background-color: #8CBD8C;
 }
 
@@ -34,37 +31,43 @@ header{
 
 h2{
     font-size: 1.5rem;
+    position: relative;
+    top: 2rem;
+}
+
+.section1{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: space-evenly;
+    position: relative;
+    top: 5rem;
 }
 
 .section-vendas{
-    padding: 1rem;
-    border: 0.1rem solid black;
-    position: relative;
-    display:flex;
+    display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
+    padding: 1rem;
+    border: 0.05rem solid #0D284F;
+    border-right: 0rem;
     align-items:center;
-    top: 5rem;
     width: 8rem;
-    height: 4rem;
+    height: 6em;
 }
 
 .section-gastos{
-    padding: 1rem;
-    border: 0.1rem solid black;
-    position: relative;
-    display:flex;
+    display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
+    padding: 1rem;
+    border: 0.05rem solid #0D284F;
     align-items:center;
-    left: 10.5rem;
-    bottom: 1.2rem;
     width: 8rem;
-    height: 4rem;
+    height: 6em;
 }
 
 .destaque{
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: bold;
 }
 
@@ -74,13 +77,26 @@ h2{
     top: 1rem;
 }
 
+
+.section2{
+    display: flex;
+    justify-content: space-around;
+    align-items: space-around;
+    position: relative;
+    top: 10rem;
+}
+
 .section-transacoes{
     padding-right: 0rem;
-    border-right: 0.1rem solid black;
+    border-right: 0.1rem solid #0D284F;
     position: relative;
-    top: 2rem;
     width: 8rem;
     height: 10rem;
+}
+
+.section-grafico{
+    width: 9rem;
+    bottom: 8rem;
 }
 
 .subtexto{
@@ -92,33 +108,27 @@ h2{
     font-weight: bold;
 }
 
-.section-grafico{
-    position: relative;
-    left: 9rem;
-    width: 9rem;
-    bottom: 8rem;
-}
-
 .grafico{
-    width: 12rem;
+    width: 10rem;
     height: 10rem;
 }
 
 .botao{
     display: flex; 
-    position: relative;
     align-items: center;
     flex-direction: column;
-    border: 0.1rem solid black;
+    position: relative;
+    border: 0.1rem solid #0D284F;
     padding: 1rem;
     margin: 1rem;
+    margin-top: 10rem;
     min-width: 8rem; 
     height: 0.7rem;
-    bottom: 2.5rem;
-    right: 1.5rem;
+    top: 4rem;
+    right: 5rem;
     background-color: #8CBD8C;
 }
-    
+
 .fonte{
     align-items: center;
     font-size: 1.2rem
@@ -127,9 +137,15 @@ h2{
 img{
     width: 2.5rem;
     height: 2.5rem;
+    position: relative;
+    left: 0.5rem;
 }
 
 .open-sans{
     font-family: 'Open Sans', sans-serif;
-    color: #0D284F;
+    color: black;
+}
+
+a{
+    text-decoration: none;
 }
