--- a/CSS/index.css
+++ b/CSS/index.css
@@ -16,7 +16,7 @@ header{
     justify-content: flex-start;
     align-items: center;
     position: relative;
-    border-bottom: 0.1rem solid black;
+    border-bottom: 0.1rem solid #0D284F;
     background-color: #8CBD8C;
 }
 
@@ -43,8 +43,8 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    border: 0.1rem solid black;
-    background-color: white;
+    border: 0.1rem solid #0D284F;
+    background-color: #B3C7E3;
     position: relative;
     top: 2rem;
 }
@@ -66,7 +66,7 @@ header{
     position: relative;
     align-items: center;
     flex-direction: column;
-    border: 0.1rem solid black;
+    border: 0.1rem solid #0D284F;
     padding: 1rem;
     margin: 1rem;
     min-width: 20rem; 
@@ -92,5 +92,9 @@ img{
 
 .open-sans{
     font-family: 'Open Sans', sans-serif;
-    color: #0D284F;
+    color: black;
+}
+
+a{
+    text-decoration: none;
 }
