--- a/CSS/historico1.css
+++ b/CSS/historico1.css
@@ -95,7 +95,7 @@ header{
     padding: 1rem;
     margin: 1rem; 
     height: 0.5rem;
-    background-color: #A1D6A1;
+    background-color: #8CBD8C;
 }
 
 .font{
