--- a/CSS/historico2.css
+++ b/CSS/historico2.css
@@ -38,7 +38,7 @@ h2{
 .section1{
     display: flex;
     justify-content: space-evenly;
-    align-items: space-evenly;
+    align-items: center;
     position: relative;
     top: 5rem;
 }
@@ -81,7 +81,7 @@ h2{
 .section2{
     display: flex;
     justify-content: space-around;
-    align-items: space-around;
+    align-items: center;
     position: relative;
     top: 10rem;
 }
