--- a/CSS/pag-rej.css
+++ b/CSS/pag-rej.css
@@ -75,6 +75,11 @@ img{
     color: black;
 }
 
+.eb-garamond{
+    font-family: 'EB Garamond', serif;
+    color: black;
+}
+
 a{
     text-decoration: none;
 }
