--- a/CSS/pagar2.css
+++ b/CSS/pagar2.css
@@ -49,7 +49,7 @@ main{
     justify-content: center;
     align-items: center;
     width: 100%;
-    font-size: 1.3rem;
+    font-size: 1.6rem;
 }
 
 .botao {
@@ -78,6 +78,11 @@ img{
 
 .open-sans{
     font-family: 'Open Sans', sans-serif;
+    color: black;
+}
+
+.eb-garamond{
+    font-family: 'EB Garamond', serif;
     color: black;
 }
 
